// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ K: "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ K: "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V"
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  K: "V",
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V",
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V"
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  K: "V",
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V",
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar"
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  foo: "bar",
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar",
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar"
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  foo: "bar",
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar",
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar"
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  foo: "bar",
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"all"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar",
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar"
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  foo: "bar",
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"es5"} format 3`] = `
====================================options=====================================
parsers: ["jsonc"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar",
}

================================================================================
`;
